--- a/dashboard.html
+++ b/dashboard.html
@@ -5,22 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard – Positive Connection</title>
 
-  <!-- Font Awesome -->
+  <!-- Fonts & Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
       --text: #222;
-      --card-bg: rgba(255, 255, 255, 0.8);
-      --nav-bg: rgba(255, 255, 255, 0.85);
+      --card-bg: rgba(255, 255, 255, 0.85);
+      --nav-bg: rgba(255, 255, 255, 0.9);
       --btn-bg: #3b82f6;
       --btn-hover: #2563eb;
     }
 
     body.dark {
       --text: #f9fafb;
-      --card-bg: rgba(17, 24, 39, 0.8);
+      --card-bg: rgba(17, 24, 39, 0.85);
       --nav-bg: rgba(17, 24, 39, 0.85);
     }
 
@@ -37,18 +37,14 @@
     .overlay {
       min-height: 100vh;
       backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px);
       padding-bottom: 40px;
     }
 
     .navbar {
       background: var(--nav-bg);
       padding: 6px 16px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
       position: relative;
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      border-bottom: 1px solid rgba(0,0,0,0.05);
     }
 
     .nav-container {
@@ -58,36 +54,29 @@
       flex-wrap: wrap;
     }
 
-    .brand {
+    .logo-box {
       display: flex;
       align-items: center;
       gap: 10px;
-      text-decoration: none;
     }
 
-    .brand img {
+    .logo-img {
       height: 100px;
     }
 
-    .brand-text {
-      display: flex;
-      flex-direction: column;
-      line-height: 1;
-    }
-
-    .brand-text .name {
-      font-size: 16px;
+    .logo-text {
       font-weight: bold;
       color: #2563eb;
+      font-size: 16px;
     }
 
     .nav-links {
       list-style: none;
       display: flex;
       gap: 20px;
-      padding: 0;
-      margin: 10px 0 0;
       align-items: center;
+      padding: 0;
+      margin: 0;
     }
 
     .nav-links a,
@@ -95,68 +84,19 @@
       text-decoration: none;
       color: var(--text);
       font-weight: 500;
-      transition: all 0.2s ease;
-      display: flex;
-      align-items: center;
       background: none;
       border: none;
       cursor: pointer;
       font-size: 16px;
+      transition: all 0.2s ease;
+      display: flex;
+      align-items: center;
     }
 
     .nav-links a:hover,
     .nav-links button:hover {
       color: var(--btn-hover);
       transform: scale(1.05);
-    }
-
-    .nav-links img.profile-img {
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-right: 6px;
-    }
-
-    .toggle-btn, .hamburger {
-      cursor: pointer;
-      font-size: 18px;
-      background: none;
-      border: none;
-      color: var(--text);
-    }
-
-    .hamburger { display: none; }
-
-    .dashboard {
-      max-width: 900px;
-      margin: 40px auto;
-    }
-
-    .card {
-      background: var(--card-bg);
-      padding: 20px;
-      border-radius: 12px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      transition: background 0.3s;
-    }
-
-    .btn {
-      background: var(--btn-bg);
-      color: white;
-      padding: 10px 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-right: 10px;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn:hover {
-      background: var(--btn-hover);
     }
 
     .logout-icon-btn {
@@ -170,6 +110,35 @@
     .logout-icon-btn:hover {
       color: var(--btn-hover);
       transform: scale(1.1);
+    }
+
+    .dashboard {
+      max-width: 900px;
+      margin: 40px auto;
+    }
+
+    .card {
+      background: var(--card-bg);
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+    }
+
+    .btn {
+      background: var(--btn-bg);
+      color: white;
+      padding: 12px 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      text-align: center;
+    }
+
+    .btn:hover {
+      background: var(--btn-hover);
     }
 
     .emoji-buttons {
@@ -190,48 +159,93 @@
       transform: scale(1.2);
     }
 
+    .group-session-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .group-session-row {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .session-box {
+      flex: 1;
+      min-width: 200px;
+      background: var(--card-bg);
+      color: var(--text);
+      border: 2px solid #2563eb;
+      border-radius: 10px;
+      padding: 15px;
+      text-align: center;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .session-box strong {
+      font-size: 18px;
+      color: #2563eb;
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 100;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: var(--card-bg);
+      color: var(--text);
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 320px;
+      text-align: center;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .modal-content ul li::before {
+      content: "👤 ";
+      margin-right: 6px;
+    }
+
     @media (max-width: 768px) {
-      .nav-links {
-        display: none;
+      .group-session-row {
         flex-direction: column;
-        width: 100%;
-        background: var(--nav-bg);
-        margin-top: 10px;
-      }
-      .nav-links.active {
-        display: flex;
-      }
-      .hamburger {
-        display: block;
       }
     }
   </style>
 </head>
 <body>
+  <script>
+    if (localStorage.getItem('darkMode') === 'enabled') {
+      document.body.classList.add('dark');
+    }
+  </script>
+
   <div class="overlay">
     <nav class="navbar">
       <div class="nav-container">
-        <a href="dashboard.html" class="brand">
-          <img src="counseling-removebg-preview.png" alt="Counseling Logo">
-          <div class="brand-text">
-            <span class="name">Positive Connection</span>
-          </div>
-        </a>
-        <button class="hamburger" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
+        <div class="logo-box">
+          <img src="counseling-removebg-preview.png" alt="E-Counseling Logo" class="logo-img" />
+          <span class="logo-text">Positive Connection</span>
+        </div>
         <ul class="nav-links" id="navLinks">
           <li><a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a></li>
           <li><a href="book.html"><i class="fas fa-calendar-check"></i> Book</a></li>
           <li><a href="resources.html"><i class="fas fa-book-open"></i> Self-Help</a></li>
           <li><a href="feedback.html"><i class="fas fa-comment-dots"></i> Feedback</a></li>
-          <li><a href="profile.html">
-          <a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
-          </a></li>
-          <li>
-            <button class="logout-icon-btn" onclick="logout()" title="Logout">
-              <i class="fas fa-sign-out-alt"></i>
-            </button>
-          </li>
-          <li><button class="toggle-btn" onclick="toggleDarkMode()" title="Toggle Dark Mode"><i class="fas fa-moon"></i></button></li>
+          <li><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
+          <li><button class="logout-icon-btn" onclick="logout()" title="Logout"><i class="fas fa-sign-out-alt"></i></button></li>
+          <li><button class="logout-icon-btn" onclick="toggleDarkMode()" title="Toggle Dark Mode"><i class="fas fa-moon"></i></button></li>
         </ul>
       </div>
     </nav>
@@ -255,15 +269,60 @@
       </div>
 
       <div class="card">
-        <h3>Next Session</h3>
-        <p><strong>Date:</strong> June 25, 2025<br><strong>Time:</strong> 2:30 PM</p>
-        <button class="btn">Join Now</button>
+        <h3>Group Sessions</h3>
+        <div class="group-session-wrapper">
+          <div class="group-session-row">
+            <div class="session-box">
+              <strong>📅 Today</strong>
+              <p>July 03, 2025<br>2:30 PM</p>
+              <button class="btn" onclick="window.location.href='https://example.com/session-today'">Join</button>
+            </div>
+            <div class="session-box">
+              <strong>🔜 Tomorrow</strong>
+              <p>July 04, 2025<br>4:00 PM</p>
+              <button class="btn" onclick="window.location.href='https://example.com/session-tomorrow'">Join</button>
+            </div>
+            <div class="session-box">
+              <strong>⏭️ Day After</strong>
+              <p>July 05, 2025<br>10:00 AM</p>
+              <button class="btn" onclick="window.location.href='https://example.com/session-dayafter'">Join</button>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <h3>Quick Actions</h3>
-        <button class="btn">Talk Now</button>
-        <button class="btn">Book Session</button>
+        <div style="display: flex; flex-direction: column; gap: 12px;">
+          <button class="btn" onclick="showPhonePopup()">
+            <i class="fas fa-phone-alt" style="margin-right: 8px;"></i> Talk Now
+          </button>
+          <a href="book.html" class="btn">
+            <i class="fas fa-calendar-check" style="margin-right: 8px;"></i> Book Session
+          </a>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Upcoming Sessions</h3>
+        <ul style="padding-left: 20px;">
+          <li>📆 July 10, 2025 – 3:00 PM with Dr. Aisyah</li>
+          <li>📆 July 12, 2025 – 11:00 AM with Mr. Daniel</li>
+          <li>📆 July 15, 2025 – 2:00 PM with Ms. Farah</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Phone Modal -->
+    <div class="modal" id="phoneModal">
+      <div class="modal-content">
+        <h4>Contact Our Counselors</h4>
+        <ul style="list-style: none; padding: 0; text-align: left; line-height: 1.8;">
+          <li><strong>📞 Dr. Aisyah:</strong> +6012-111-2233</li>
+          <li><strong>📞 Mr. Daniel:</strong> +6013-444-5566</li>
+          <li><strong>📞 Ms. Farah:</strong> +6014-777-8899</li>
+        </ul>
+        <button class="btn" onclick="closePhonePopup()">Close</button>
       </div>
     </div>
   </div>
@@ -280,27 +339,28 @@
       );
     }
 
-    function toggleMenu() {
-      document.getElementById('navLinks').classList.toggle('active');
+    function logout() {
+      if (confirm("Are you sure you want to log out?")) {
+        sessionStorage.clear();
+        window.location.href = "index.html";
+      }
+    }
+
+    function showPhonePopup() {
+      document.getElementById('phoneModal').style.display = 'flex';
+    }
+
+    function closePhonePopup() {
+      document.getElementById('phoneModal').style.display = 'none';
     }
 
     const storedName = sessionStorage.getItem('username') || 'User';
     const hour = new Date().getHours();
     let greet = 'Welcome';
-
     if (hour < 12) greet = 'Good morning';
     else if (hour < 18) greet = 'Good afternoon';
     else greet = 'Good evening';
-
     document.getElementById('greeting').textContent = `${greet}, ${storedName}!`;
-
-    function logout() {
-      const confirmLogout = confirm("Are you sure you want to log out?");
-      if (confirmLogout) {
-        sessionStorage.clear();
-        window.location.href = "index.html";
-      }
-    }
 
     function setTip(mood) {
       const tips = {
